--- a/Initial.html
+++ b/Initial.html
@@ -6,40 +6,36 @@
   <body>
    <h2>Personal Information</h2>
    <br /><br /><br />
-    <table border="0">
+    <table border="0" >
       <tr>
-        <th>Name</th>
+        <th color="#FFE4E1">Name</th>
         <td>Jingxian Fan</td>
       </tr>
       <tr>
-        <th>Department</th>
+        <th color="#FFE4E1">Department</th>
         <td>School of Industrial Engineering</td>
       </tr>
-      <tr>
-        <th>Education</th>
+      <tr >
+        <th color="#FFE4E1">Education</th>
         <td>Off-campus MS.eng.@Purdue
         <br />
             BS@ZJU</td>
       </tr>
       <tr>
-        <th>General Work Hours</th>
+        <th color="#FFE4E1">General Work Hours</th>
         <td>12:00am-21:00pm(GMT+8)</td>
       </tr>
       <tr>
-        <th>Skill Sets</th>
+        <th color="#FFE4E1">Skill Sets</th>
         <td>C(3 years);New to html/css</td>
       </tr>
       <tr>
-        <th>Personality</th>
-        <td>Active,chatty,often have mountains of 
-
-questions to ask</td>
+        <th color="#FFE4E1">Personality</th>
+        <td>Active,chatty,often have mountains of questions to ask</td>
       </tr>
       <tr>
-        <th>Team Composition</th>
-        <td>Currently another off-campus 
-
-student&me,welcome others to join</td>
+        <th color="#FFE4E1">Team Composition</th>
+        <td>Currently another off-campus student&me,welcome others to join</td>
       </tr>
    </table>
  </body>
