--- a/Initial.html
+++ b/Initial.html
@@ -8,33 +8,33 @@
    <br /><br /><br />
     <table border="0" >
       <tr>
-        <th color="#FFE4E1">Name</th>
+        <th bgcolor="#FFE4E1">Name</th>
         <td>Jingxian Fan</td>
       </tr>
       <tr>
-        <th color="#FFE4E1">Department</th>
+        <th bgcolor="#FFE4E1">Department</th>
         <td>School of Industrial Engineering</td>
       </tr>
       <tr >
-        <th color="#FFE4E1">Education</th>
+        <th bgcolor="#FFE4E1">Education</th>
         <td>Off-campus MS.eng.@Purdue
         <br />
             BS@ZJU</td>
       </tr>
       <tr>
-        <th color="#FFE4E1">General Work Hours</th>
+        <th bgcolor="#FFE4E1">General Work Hours</th>
         <td>12:00am-21:00pm(GMT+8)</td>
       </tr>
       <tr>
-        <th color="#FFE4E1">Skill Sets</th>
+        <th bgcolor="#FFE4E1">Skill Sets</th>
         <td>C(3 years);New to html/css</td>
       </tr>
       <tr>
-        <th color="#FFE4E1">Personality</th>
+        <th bgcolor="#FFE4E1">Personality</th>
         <td>Active,chatty,often have mountains of questions to ask</td>
       </tr>
       <tr>
-        <th color="#FFE4E1">Team Composition</th>
+        <th bgcolor="#FFE4E1">Team Composition</th>
         <td>Currently another off-campus student&me,welcome others to join</td>
       </tr>
    </table>
