--- a/hw1_Initial.html
+++ b/hw1_Initial.html
@@ -1,10 +1,16 @@
  <html>
     <head>
+    <link rel="stylesheet" href="format.css"/>
       <title>Personal Profile</title>
     </head>
 
   <body>
-   <h2>Personal Information</h2>
+   <div ID="top" bgcolor="#FFC0CB"><p>IE590 Homework1</p></div>
+    <div ID="left"></div>
+     <div ID="right"></div>
+     <div ID="middle">      
+	    	
+   <h1>Personal Information</h1>
    <br /><br />
     <table border="0" >
       <tr>
@@ -37,6 +43,7 @@
         <th bgcolor="#FFE4E1">Team Composition</th>
         <td>Currently another off-campus student&me,welcome others to join</td>
       </tr>
-   </table>
+    </table>
+   </div>
  </body>
 </html>
