--- a/hw1_Initial.html
+++ b/hw1_Initial.html
@@ -1,18 +1,18 @@
  <html>
     <head>
-    <link rel="stylesheet" href="format.css"/>
+    <link rel="stylesheet" type="text/css" href="format.css"/>
       <title>Personal Profile</title>
     </head>
 
   <body>
-   <div ID="top" bgcolor="#FFC0CB"><p>IE590 Homework1</p></div>
+   <div ID="top" ><p>IE590 Homework1</p></div>
     <div ID="left"></div>
      <div ID="right"></div>
      <div ID="middle">      
 	    	
    <h1>Personal Information</h1>
    <br /><br />
-    <table border="0" >
+    <table border="0" frame="hsides">
       <tr>
         <th bgcolor="#FFE4E1">Name</th>
         <td>Jingxian Fan</td>
